# Energy-and-Memory-Ram-Optimization

./: .dockerignore  .env  .gitignore  CLAUDE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.simple  EVALUATION_GUIDE.md  EXECUTION_SUMMARY.md  GRADERS.md  GRADER_CONFIGURATION.md  HACKATHON_GRADER_INTEGRATION.md  HF_SPACE_DEBUG.md  IMPLEMENTATION_SUMMARY_V2.md  INFERENCE_JUDGING_GUIDE.md  INFERENCE_V2_GUIDE.md  PRE_VALIDATION_CHECKLIST.md  QUICK_START.md  README.md  RUN_INSTRUCTIONS.md  SUBMISSION_FIX.md  VALIDATION_RESULTS.md  __init__.py  check_graders.py  client.py  deploy_to_space.py  evaluate_inference.py  grader_discovery.py  grader_manifest.py  graders.json  graders.py  graders_manifest.py  gym_wrapper.py  inference.py  inference_v2.py  models.py  openenv.yaml  pipeline_results.json  pyproject.toml  show_ram_values.py  (+11 more)
he_demo/: __init__.py  task_graders.py
he_demo/server/: app.py
openenv-energy-rl/: Dockerfile  README.md  environment.py  inference.py  requirements.txt
openenv_he_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __init__.py  app.py  he_demo_environment.py
